# project

./: .gitignore
c++/BuffDetect/: CMakeLists.txt  Doxyfile
c++/BuffDetect/.cache/clangd/index/: BuffDetect.hpp.0B333391F5352538.idx  BuffDetect_new.hpp.EC327B0FA8193521.idx  main.cpp.92D691ACCD3F67F2.idx  main.cpp.D87A4F89E19378FF.idx
c++/BuffDetect/doxygen/html/: BuffDetect_8hpp.html  BuffDetect_8hpp.js  BuffDetect_8hpp__incl.map  BuffDetect_8hpp__incl.md5  BuffDetect_8hpp_source.html  BuffDetect__new_8hpp.html  BuffDetect__new_8hpp.js  BuffDetect__new_8hpp__incl.md5  BuffDetect__new_8hpp_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  DxImageProc_8h.html  DxImageProc_8h__dep__incl.md5  DxImageProc_8h__incl.map  DxImageProc_8h__incl.md5  DxImageProc_8h_source.html  GxCamera_8cpp.html  GxCamera_8cpp__incl.md5  GxCamera_8h.html  GxCamera_8h.js  GxCamera_8h__dep__incl.map  GxCamera_8h__incl.map  GxCamera_8h_source.html  GxIAPI_8h.html  GxIAPI_8h.js  GxIAPI_8h__dep__incl.map  GxIAPI_8h__dep__incl.md5  GxIAPI_8h__incl.map  GxIAPI_8h__incl.md5  annotated.html  annotated_dup.js  classBuff-members.html  classBuff.html  classGxCamera-members.html  classGxCamera.html  classGxCamera.js  classGxCamera__coll__graph.map  classGxCamera__coll__graph.md5  classes.html  dir_000006_000007.html  (+96 more)
c++/BuffDetect/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_4.js  all_5.js  all_8.js  all_9.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_4.js  defines_8.js  enums_0.js  enums_1.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+24 more)
c++/BuffDetect/doxygen/latex/: BuffDetect_8hpp.tex  BuffDetect_8hpp__incl.md5  BuffDetect_8hpp_source.tex  BuffDetect__new_8hpp.tex  BuffDetect__new_8hpp__dep__incl.md5  BuffDetect__new_8hpp_source.tex  CMakeCCompilerId_8c.tex  DxImageProc_8h__dep__incl.md5  DxImageProc_8h__incl.md5  DxImageProc_8h_source.tex  GxCamera_8cpp.tex  GxCamera_8cpp__incl.md5  GxCamera_8h.tex  GxCamera_8h__dep__incl.md5  GxCamera_8h_source.tex  GxIAPI_8h.tex  GxIAPI_8h__dep__incl.md5  GxIAPI_8h_source.tex  README_8md.tex  annotated.tex  classGxCamera.tex  dir_0c1391539a524c43a56e31fdc3a04a89.tex  dir_0c1391539a524c43a56e31fdc3a04a89_dep.md5  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_bba024cd03edd7f9d6096b84e1006209.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_f5710045d1f36d0fc2af86ea08674401.tex  dir_f5710045d1f36d0fc2af86ea08674401_dep.md5  files.tex  main_8cpp.tex  main_8cpp__incl.md5  md__2home_2davi_2project_2c_09_09_2BuffDetect_2README.tex  structCOLOR__IMG__PROCESS.tex  structExposureGain.tex  structExposureGain__coll__graph.md5  structGX__DEVICE__IP__INFO.tex  structGX__DEVICE__IP__INFO__coll__graph.md5  (+11 more)
c++/BuffDetect/include/: BuffDetect.hpp  BuffDetect_new.hpp
c++/BuffDetect/src/: main.cpp
c++/CPPworkspace/NBUT_test/: CMakeLists.txt  Makefile
c++/CPPworkspace/NBUT_test/yolov5/: detect.py  main.cpp
c++/CPPworkspace/armor_detect/: CMakeLists.txt
c++/CPPworkspace/armor_detect/include/: armor.hpp
c++/CPPworkspace/armor_detect/src/: detect.cpp
c++/CPPworkspace/cmake_test/: CMakeLists.txt  main.cpp
c++/CPPworkspace/pybind11.cv.test/: CMakeLists.txt  main.cpp
c++/CPPworkspace/pybind11.cv.test/scripts/: detect.py  export.py
c++/CPPworkspace/pybind11.cv.test/scripts/utils/: plots.py
c++/camera_calibration/: 2.xml  CMakeLists.txt  camera_calibration.cpp  in_VID5.xml
c++/camera_calibration/BuffDetect/doxygen/html/: BuffDetect__new_8hpp__dep__incl.map  BuffDetect__new_8hpp__dep__incl.md5  BuffDetect__new_8hpp__incl.map  DxImageProc_8h.js  DxImageProc_8h__dep__incl.map  GxCamera_8cpp.js  GxCamera_8cpp__incl.map  GxCamera_8h__dep__incl.md5  GxCamera_8h__incl.md5  GxIAPI_8h_source.html  README_8md.html  classBuff.js  classBuff__coll__graph.map  classBuff__coll__graph.md5  dir_583dbc8fea55942f58d395f74897701e.html  dir_583dbc8fea55942f58d395f74897701e_dep.map  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6b26403ba0a0c99a4be83950e5f7d1ff.html  dir_bba024cd03edd7f9d6096b84e1006209.html  dir_bba024cd03edd7f9d6096b84e1006209.js  dir_bba024cd03edd7f9d6096b84e1006209_dep.map  dir_d44c64559bbebec7f509842c48db8b23.js  functions.html  globals_b.html  (+35 more)
c++/camera_calibration/BuffDetect/include/: BuffDetect.hpp
c++/camera_calibration/BuffDetect/src/: main.cpp
(+1140 files in other folders)
